--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/unshiftio/liferaft"
+    "url": "https://github.com/markwylde/liferaft"
   },
   "keywords": [
     "raft",
     "liferaft",
-    "lifeboat"
+    "lifeboat",
+    "distributed",
+    "consensus",
+    "protocol"
   ],
   "author": "Arnout Kazemier",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/unshiftio/liferaft/issues"
+    "url": "https://github.com/markwylde/liferaft/issues"
   },
-  "homepage": "https://github.com/unshiftio/liferaft",
+  "homepage": "https://github.com/markwylde/liferaft",
   "dependencies": {
     "emits": "^3.0.0",
     "encoding-down": "^7.1.0",
